<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Калькулятор</string>
    <string name="display_default">0</string>

    <!-- Цифры -->
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>

    <!-- Операции -->
    <string name="btn_plus">+</string>
    <string name="btn_minus">−</string>
    <string name="btn_multiply">×</string>
    <string name="btn_divide">÷</string>
    <string name="btn_equals">=</string>

    <!-- Функции -->
    <string name="btn_clear">C</string>
    <string name="btn_delete">⌫</string>
    <string name="btn_dot">.</string>
    <string name="btn_plus_minus">±</string>
    <string name="btn_percent">%</string>
</resources>