<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Дисплей калькулятора -->
        <TextView
            android:id="@+id/textViewDisplay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/display_height"
            android:layout_marginBottom="@dimen/margin_medium"
            android:background="@drawable/textview_display_selector"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="end|center_vertical"
            android:padding="@dimen/padding_display"
            android:text="@string/display_default"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_display" />

        <!-- Строка 1: Функциональные кнопки -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_clear"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/button_function_selector"
                android:text="@string/btn_clear"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_plus_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/button_function_selector"
                android:text="@string/btn_plus_minus"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_percent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/button_function_selector"
                android:text="@string/btn_percent"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_operator_selector"
                android:text="@string/btn_divide"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />
        </LinearLayout>

        <!-- Строка 2: 7 8 9 × -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/button_number_selector"
                android:text="@string/btn_7"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/button_number_selector"
                android:text="@string/btn_8"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/button_number_selector"
                android:text="@string/btn_9"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_multiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_operator_selector"
                android:text="@string/btn_multiply"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />
        </LinearLayout>

        <!-- Строка 3: 4 5 6 − -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/button_number_selector"
                android:text="@string/btn_4"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/button_number_selector"
                android:text="@string/btn_5"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/button_number_selector"
                android:text="@string/btn_6"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_operator_selector"
                android:text="@string/btn_minus"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />
        </LinearLayout>

        <!-- Строка 4: 1 2 3 + -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/button_number_selector"
                android:text="@string/btn_1"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/button_number_selector"
                android:text="@string/btn_2"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/button_number_selector"
                android:text="@string/btn_3"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_operator_selector"
                android:text="@string/btn_plus"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />
        </LinearLayout>

        <!-- Строка 5: 0 . ⌫ = -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_0"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="2"
                android:background="@drawable/button_number_selector"
                android:text="@string/btn_0"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/button_number_selector"
                android:text="@string/btn_dot"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_equals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_operator_selector"
                android:text="@string/btn_equals"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_button" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>